Adding submitted version

--- a/tapp/paper.bib
+++ b/tapp/paper.bib
@@ -26,6 +26,13 @@
   year={2017},
   organization={USENIX Association}
 }
+@inproceedings{noworkflow,
+  title={Collecting and analyzing provenance on interactive notebooks: when IPython meets noWorkflow},
+  author={Pimentel, Jo{\~a}o Felipe Nicolaci and Braganholo, Vanessa and Murta, Leonardo and Freire, Juliana},
+  booktitle={Workshop on the Theory and Practice of Provenance (TaPP), Edinburgh, Scotland},
+  pages={155--167},
+  year={2015}
+}
 @inproceedings{jupyter,
   title={Jupyter Notebooks-a format for reproducible computational workflows.},
   author={Kluyver, Thomas and Ragan-Kelley, Benjamin and P{\'e}rez, Fernando and Granger, Brian E and Bussonnier, Matthias and Frederic, Jonathan and Kelley, Kyle and Hamrick, Jessica B and Grout, Jason and Corlay, Sylvain and others},
@@ -50,6 +57,12 @@
   pages={3045--3054},
   year={2004},
   publisher={Oxford University Press}
+}
+@book{literate,
+  title={Literate programming},
+  author={Knuth, Donald Ervin},
+  year={1992},
+  publisher={Center for the Study of Language and Information Stanford}
 }
 @article{rmarkdown,
   title={rmarkdown: Dynamic Documents for R},
@@ -108,4 +121,10 @@
   pages={122--131},
   year={1984},
   publisher={ACM}
+}
+@other{ofcom,
+  title={Open data},
+  author={Ofcom},
+  howpublished={Available online at \url{https://www.ofcom.org.uk/research-and-data/data/opendata}},
+  year={2018}
 }
