Adding Vizer reference

--- a/tapp/paper.bib
+++ b/tapp/paper.bib
@@ -128,3 +128,21 @@
   howpublished={Available online at \url{https://www.ofcom.org.uk/research-and-data/data/opendata}},
   year={2018}
 }
+@inproceedings{vizer,
+ author = {Freire, Juliana and Glavic, Boris and Kennedy, Oliver and Mueller, Heiko},
+ title = {The Exception That Improves the Rule},
+ booktitle = {Proceedings of the Workshop on Human-In-the-Loop Data Analytics},
+ series = {HILDA '16},
+ year = {2016},
+ pages = {7:1--7:6},
+ articleno = {7},
+ numpages = {6},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+@other{livegamma,
+  title={Design and implementation of a live coding environment for data science},
+  author={Petricek, Tomas},
+  year={2018},
+  howpublished={Unpublished draft. Available online at \url{http://tomasp.net/academic/drafts/live}}
+}
